package sort;

import model.Product;
import java.util.List;

public interface ProductSorter {
    void sort(List<Product> products);
}