package sort;

import model.Product;
import java.util.Comparator;
import java.util.List;

public class SortByNameAsc implements ProductSorter {
    public void sort(List<Product> products) {
        products.sort(Comparator.comparing(Product::getName));
    }
}