@startuml

class Product {
  - code : String
  - name : String
  - price : double
  - discountPrice : double
  + getCode()
  + getName()
  + getPrice()
  + getDiscountPrice()
  + setDiscountPrice(double)
}

class Cart {
  - products : List<Product>
  - promotions : List<Promotion>
  - sorter : ProductSorter
  + add(Product)
  + getProducts()
  + addPromotion(Promotion)
  + applyPromotions()
  + totalPrice(List<Product>)
  + findCheapest()
  + findMostExpensive()
  + nCheapest(int)
  + nMostExpensive(int)
  + setSorter(ProductSorter)
  + sort()
  - copyProduct(Product) 
  - copyList(List<Product>) 
}

interface Promotion {
  + apply(List<Product>)
}

class DiscountOver300 {
  + apply(List<Product>)
}
class Buy2Get1Free {
  + apply(List<Product>)
}
class Coupon30Percent {
  - productCode : String
  + apply(List<Product>)
}
class FreeCup {
  + apply(List<Product>)
}

Promotion <|.. DiscountOver300
Promotion <|.. Buy2Get1Free
Promotion <|.. Coupon30Percent
Promotion <|.. FreeCup

interface ProductSorter {
  + sort(List<Product>)
}

class SortByPriceDesc {
  + sort(List<Product>)
}
class SortByNameAsc {
  + sort(List<Product>)
}
class SortByPriceThenName {
  + sort(List<Product>)
}

ProductSorter <|.. SortByPriceDesc
ProductSorter <|.. SortByNameAsc
ProductSorter <|.. SortByPriceThenName

Cart --> Product
Cart --> Promotion
Cart --> ProductSorter

@enduml